// SPDX-License-Identifier: Apache-2.0
syntax = "proto3";

package org.hiero.block.internal;

option java_package = "org.hiero.block.internal.protoc";
// <<<pbj.java_package = "org.hiero.block.internal">>> This comment is special code for setting PBJ Compiler java package
option java_multiple_files = true;

import "block-node/api/block_access_service.proto";
import "block-node/api/block_stream_subscribe_service.proto";
import "block-node/api/block_stream_publish_service.proto";

message PublishStreamRequestUnparsed {
    oneof request {
        BlockItemSetUnparsed block_items = 1;
        org.hiero.block.api.PublishStreamRequest.EndStream end_stream = 2;
    }
}

message SubscribeStreamResponseUnparsed {
    oneof response {
        /**
         * A final response item describing the terminal status of this stream.
         * <p>
         * The block node server SHALL end the stream following this message.
         */
        org.hiero.block.api.SubscribeStreamResponse.Code status = 1;

        /**
         * A stream response item containing one or more `BlockItem`s.
         * <p>
         * The full stream SHALL consist of many `block_items` messages
         * followed by a single `status` message.
         */
        BlockItemSetUnparsed block_items = 2;
    }
}

message BlockResponseUnparsed {
    org.hiero.block.api.BlockResponse.Code status = 1;
    BlockUnparsed block = 2;
}

message BlockUnparsed {
    repeated BlockItemUnparsed block_items = 1;
}

message BlockItemSetUnparsed {
    repeated BlockItemUnparsed block_items = 1;
}

message BlockItemUnparsed {
    oneof item {
        bytes block_header = 1;
        bytes event_header = 2;
        bytes round_header = 3;
        bytes event_transaction = 4;
        bytes transaction_result = 5;
        bytes transaction_output = 6;
        bytes state_changes = 7;
        bytes filtered_item_hash = 8;
        bytes block_proof = 9;
        bytes record_file = 10;
        bytes trace_data = 16;
    }
}
